@@ -1,3 +1,7 @@
+2007-07-05  Andreas Kirschbaum
+
+	* Add option -N to disable full-screen mode/enable windowed mode.
+
 2007-07-04  Andreas Kirschbaum
 
 	* Change skin handling from hard-coded JXCSkinPrelude class to
